--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>101 Oyunu Puanlama</h1>
     <div id="oyuncuGirisi">
         <label for="oyuncu1">Oyuncu 1:</label>
-        <input type="text" id="oyuncu1" name="oyuncu1"><br>
+        <input type="text" id="oyuncu1" name="oyuncu1" required><br>
         <label for="oyuncu2">Oyuncu 2:</label>
-        <input type="text" id="oyuncu2" name="oyuncu2"><br>
+        <input type="text" id="oyuncu2" name="oyuncu2" required><br>
         <label for="oyuncu3">Oyuncu 3:</label>
-        <input type="text" id="oyuncu3" name="oyuncu3"><br>
+        <input type="text" id="oyuncu3" name="oyuncu3" required><br>
         <label for="oyuncu4">Oyuncu 4:</label>
-        <input type="text" id="oyuncu4" name="oyuncu4"><br>
+        <input type="text" id="oyuncu4" name="oyuncu4" required><br>
         <button onclick="oyuncuEkle()">Oyuncuları Ekle</button>
     </div>
     <div id="puanlama" style="display:none;">
